<?xml version="1.0" encoding="utf-8"?>
<!-- No translation of sample extensions -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- Name of app, shown when installing/uninstalling extension -->
    <string name="app_name">Scribble on the air</string>
    <!-- Title of preference activity -->
    <string name="preference_activity_title">Sample sensor settings</string>
    <!-- Name of extension, shown in preferences -->
    <string name="extension_name">Scribble on the air</string>
    <!-- Configuration title shown in preferences -->
    <string name="configuration_text">Sample sensor settings</string>
    <!-- Menu option shown in preferences -->
    <string name="preference_option_read_me">READ ME</string>
    <!-- Read me text shown in dialog -->
    <string name="preference_option_read_me_txt">The sample sensor extension shows the reading from the device accelerometer and light sensor on the device.</string>

    <!-- Sensor is unreliable. -->
    <string name="accuracy_unreliable">Unrel.</string>

    <!-- Sensor accuracy is low -->
    <string name="accuracy_low">Low</string>

    <!-- Sensor accuracy is medium -->
    <string name="accuracy_medium">Medium</string>

    <!-- Sensor accuracy is high -->
    <string name="accuracy_high">High</string>

    <!-- Label for the accuracy. -->
    <string name="label_accuracy">Accuracy:&#160;</string>

    <!-- Label for the x acceleration. -->
    <string name="label_x">x:&#160;</string>

    <!-- Label for the y acceleration. -->
    <string name="label_y">y:&#160;</string>

    <!-- Label for the z acceleration. -->
    <string name="label_z">z:&#160;</string>

    <!-- Label for the time stamp. -->
    <string name="label_time">ms:&#160;</string>

    <!-- Labels for the light sensor. -->
    <string name="label_light">light:&#160;</string>
    <string name="title_lightsensor">Light sensor</string>

</resources>