<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/smart_watch_2_control_width"
    android:layout_height="@dimen/smart_watch_2_control_height"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10px"
        android:text="@string/title_lightsensor"
        android:textColor="@android:color/white"
        android:textSize="@dimen/smart_watch_2_text_size_large" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/BaseStyle"
            android:text="@string/label_light" />

        <TextView
            android:id="@+id/light_value"
            style="@style/BaseStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/BaseStyle"
            android:text="@string/label_time" />

        <TextView
            android:id="@+id/light_value_timestamp"
            style="@style/BaseStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/BaseStyle"
            android:text="@string/label_accuracy" />

        <TextView
            android:id="@+id/light_value_accuracy"
            style="@style/BaseStyle" />
    </LinearLayout>

</LinearLayout>